# ros_debug

./: README.md
install/: local_setup.sh  setup.sh
install/talk_listen/lib/talk_listen/: talker
install/talk_listen/share/talk_listen/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/talk_listen/share/talk_listen/cmake/: talk_listenConfig.cmake
log/: latest_build
talk_listen/: CMakeLists.txt
talk_listen/src/: listener.cpp  talker.cpp
